[metadata]
name = mephistogram
version = 0.0.1
author = Lisa Schumacher
author_email = lj.schumacher@tum.de
description = Histogram arithmetics made easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lisajschumacher/mephistogram
project_urls =
    Bug Tracker = https://github.com/lisajschumacher/mephistogram/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = core
packages = find:
python_requires = >=3.6
install_requires=
    numpy
    matplotlib

[options.packages.find]
where = core